main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "5.93.0"
    }
  }
}

provider "aws" {
  # Configuration options
  region = "var.region"
  access_key = "var.access_key"
  secret_key = "var.secret_key"
}

# Create vpc
resource "aws_vpc" "tf_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "var.vpc_name"
  }
}

# Create Internet Gateway and attach to VPC
resource "aws_internet_gateway" "tf_igw" {
  vpc_id = aws_vpc.tf_vpc.id
  tags = {
    Name = "igw"
  }
}

#create subnet 
resource "aws_subnet" "tf_subnet" {
  vpc_id = aws_vpc.tf_vpc.id
  cidr_block = var.subnet_cidr
  map_public_ip_on_launch = true
  tags = {
    Name = "tf_subnet"
  }
}

#create route table and attach Internet Gateway
resource "aws_route_table" "tf_rt" {
  vpc_id = aws_vpc.tf_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tf_igw.id
  }

  tags = {
    Name = "var.rt_name"
  }
}

#associate route table with subnet
resource "aws_route_table_association" "tf_rt_assoc" {
  subnet_id = aws_subnet.tf_subnet.id
  route_table_id = aws_route_table.tf_rt.id
}

#create a Network Security Group
resource "aws_security_group" "tf_sg" {
  name = "tf_sg"
  description = "Security Group for Terraform"
  vpc_id = aws_vpc.tf_vpc.id

  ingress {
    description = "Allow SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tf_sg"
  }
}

#create an EC2 instance
resource "aws_instance" "tf_instance" {
  ami = var.ami
  instance_type = var.instance_type
  subnet_id = aws_subnet.tf_subnet.id
  vpc_security_group_ids = [aws_security_group.tf_sg.id]
  key_name = var.key_name
  associate_public_ip_address = true
  
  user_data = <<-EOF
              #!/bin/bash
              sudo apt update -y
              sudo apt install apache2 -y 
              sudo systemctl start apache2 
              sudo bash -c 'echo Welcome to our Terraform Web Server > /var/www/html/index.html' 
              EOF 
  
  tags = {
      Name = var.instance_name
  }
  
}
